# tex_of_ocaml

./: .gitignore  Cargo.toml  README.md  secd.sty  secd.tex  test.tex
.github/workflows/: ci.yml
examples/: example1.txt  example2.txt  example3.txt  example4.txt  factorial.txt
src/: codegen.rs  compiler.rs  error.rs  list.rs  main.rs  parser.rs  syntax.rs
src_tex/: secd.sty  test.tex
