[package]
name = "tex_of_ocaml"
version = "0.1.0"
authors = ["gfngfn <bd.gfngfn @ gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
nom = "7.1.0"
im = "15"
